[tool.poetry]
name = "hyqe"
version = "0.1.0"
description = "Supplementary materials for EMNLP submission"
authors = ["anonymous"]
packages = [
    { include = "hyqe" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12" 
accelerate = "^0.27.2" 
ipython = "^8.22.2"
jupyter = "^1.0.0"
tiktoken = "^0.6.0"
cvxopt = "^1.3.2"
einops = "^0.7.0"
gdown = "^5.2.0"
numpy = "1.26.4"
huggingface-hub = "^0.26.0"
pyarrow = "^17.0.0"
transformers = "4.38.2"

 
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s (%(filename)s:%(lineno)s) [%(levelname)s] %(message)s "
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
